# fastapi-server

./: pyproject.toml
app/: config.py  main.py
app/database/: db.py
app/ml/plant_disease_detection/: class_names.json  explanation.json
app/routers/: plant_disease_detection.py  router.py
app/schemas/: plant_disease_detection.py
app/services/: plant_disease_detection.py
