[project]
name = "plant-disease-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
    "tensorflow>=2.16.1",
    "pillow>=10.1.0",
    "python-multipart>=0.0.9",
    "numpy>=2.4.6",
    "starlette>=0.46.2",
    "pydantic-settings>=2.14.2",
    "huggingface-hub>=1.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
